--- a/packages/compiler-cli/src/ngtsc/annotations/directive/BUILD.bazel
+++ b/packages/compiler-cli/src/ngtsc/annotations/directive/BUILD.bazel
@@ -20,6 +20,8 @@ ts_library(
         "//packages/compiler-cli/src/ngtsc/scope",
         "//packages/compiler-cli/src/ngtsc/transform",
         "//packages/compiler-cli/src/ngtsc/translator",
+        "//packages/compiler-cli/src/ngtsc/typecheck",
+        "//packages/compiler-cli/src/ngtsc/typecheck/api",
         "@npm//@types/node",
         "@npm//typescript",
     ],
